cmake_minimum_required(VERSION 3.17)
project(Lab_1_Assignment___C___Bonus_Implementation)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab_1_Assignment___C___Bonus_Implementation main.cpp DirectedGraph.cpp DirectedGraph.h tests.cpp tests.h utils.cpp utils.h presentation.cpp presentation.h exceptions.cpp exceptions.h)